--- a/estilo.css
+++ b/estilo.css
@@ -3,7 +3,39 @@
 }
 .textoBarr{
 
-    font-size: x-large;
+    font-size: large;
     font-weight: bold; 
 }
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+    width: 100%;
+}
+
+.carousel-inner img {
+    width: 100%;
+    max-height: 100%;
+}
+
+.carousel-inner{
+ height: auto;
+ width: 100%;
+}
+
+.row{
+
+    padding: 10px;
+    
+ 
+}
+
+.col-4{
+
+    margin: 100px;
+}
+
+.footer{
+    background-color: rgb 248, 249, 250;
+}
+
+
 
