--- a/estilo.css
+++ b/estilo.css
@@ -33,10 +33,26 @@
     background-color: rgb 248, 249, 250;
 }
 
+
 div {
     width: 100%;
     display: flex;
-    justify-content: center;
-  }
+    justify-content: center; 
+}
+
+.contenedor {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+
+}
+.texto_encima{
+    position:absolute;
+    top: 75%;
+    right: 19%;
+    font-size:  70px;
+    color : white;
+
+}
 
 
