--- a/css/estilo.css
+++ b/css/estilo.css
@@ -88,7 +88,8 @@ textarea.error   {
 
 
 nav{
-    background-color: #e4844a;
+    color: #f1ecdf;
+    background-color: rgb(245, 172, 61);
     font-weight: bold;
     font-size: large;  
 }
@@ -97,7 +98,6 @@ body{
     background-color: #f1ecdf;
 
 }
-
 
 footer{
     Background-color:#d4c9ad;
