--- a/css/Login.css
+++ b/css/Login.css
@@ -18,3 +18,13 @@
     gap: 60px;
 }
 
+input{
+    outline:  0;
+    background-color: beige;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
