--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,12 @@
+@font-face{
+    font-family: SotoBurgerNav;
+    src: url('../font/FjallaOne-Regular.ttf');
+}
+@font-face {
+    font-family: Sotoburger;
+    src: url(../font/PTSans-Regular.ttf);
+}
+
 .titulo{
     font-weight: bold;   
 }
@@ -87,9 +96,11 @@ textarea.error   {
 }
 
 
+
 nav{
     
     background-color: rgb(245, 172, 61);
+    font-family: SotoBurgerNav;
     font-weight: bold;
     font-size: large;  
    
@@ -97,7 +108,7 @@ nav{
 
 body{   
     background-color: #f1ecdf;
-
+    font-family: SotoBurger;
 }
 
 footer{
