--- a/css/Login.css
+++ b/css/Login.css
@@ -28,3 +28,34 @@ input{
     box-sizing: border-box;
     font-size: 14px;
 }
+
+.boton {
+    font-family:  sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background-color: #626567;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    color: azure;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+
+
+}
+
+.form-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+    background-color: #FDFEFE;
+    max-width: 360px;
+    padding: 45px;
+    text-align: center;
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.2), 0 5px 5px 0 rgba(0,0,0,0.2);
+}
