--- a/css/Login.css
+++ b/css/Login.css
@@ -16,6 +16,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     gap: 60px;
+    padding-bottom: 5px;
 }
 
 input{
@@ -62,4 +63,11 @@ input{
 
 .ashe1{
     color: white;
+}
+
+.restContra{
+    margin: auto;
+    padding-top: 10px 5px 10px 5px;
+    font-size: 13px;
+   
 }
