--- a/css/estilo.css
+++ b/css/estilo.css
@@ -118,10 +118,10 @@ footer{
 
 #divmap{
     height: 400px; 
-    width: 100%;
-    align-items: center;
-    padding: 40px 70px 75px 100px;
-
+    width: 1180px;
+    margin: auto;
+    border-radius: 02%;
+    
 }
 
 
