--- a/css/estilo.css
+++ b/css/estilo.css
@@ -96,7 +96,9 @@ textarea.error   {
 }
 
 
-
+header{
+    
+}
 nav{
     
     background-color: rgb(245, 172, 61);
@@ -116,31 +118,6 @@ footer{
 
 }
 
-.popup-overlay{
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100vh;
-    z-index: 1;
-    background: rgba(0,0,0,0.5);
-    display: none;
-
-}
-
-.popup{
-    position: absolute;
-    top: -150%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1.15); 
-    width: 300px;
-    height: 440px;
-    background: #f5f5f5;
-    z-index: 2;
-    opacity: 0;
-    box-shadow: 5px 5px 3px rgba(0,0,0,0.2);
-    transition: transform 300ms ease-in-out,opacity 300ms ease-in-out;
-}
 
 body.showLoginForm .popup-overlay{
     display: block;
@@ -151,76 +128,7 @@ body.showLoginForm .popup{
     transform: translate(-50%, -50%) scale(1);
 }
 
-.popup .popup-close{
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    width: 40px;
-    height: 40px;
-    background: #555;
-    color: #f5f5f5;
-    font-size: 25px;
-    font-weight: 600;
-    text-align: center;
-    border-radius: 50px;
-    cursor: pointer;
-}
 
-.popup .form .avatar {
-    margin:30px 0px 20px;
-    text-align: center;
-    
-}
-    
-.popup .form .avatar img {
-    width:120px;
-    border-radius : 50%;
-}
-
-    
-.popup .form .header {
-    text-align:center;
-    font-size: 20px;
-    font-weight : 600;
-    color:#222;
-    margin: 20px 0px;
-    
-}
-
-.popup .form .element {
-    padding: 8px 20px;
-}
-
-.popup .form .element label {
-    display: block;
-    font-size: 14px;
-    color: #222;
-    margin-bottom: 5px;
-}
-
-.popup .form .element input {
-    width: 100%;
-    padding: 8px 10px;
-    box-sizing: border-box;
-    outline: none;
-    border: 1px solid #aaa;
-    background: #eee;
-    border-radius: 5px;
-}
-.popup .form .element button {
-    margin-top: 5px;
-    width: 100%;
-    padding: 10px;
-    text-transform: uppercase;
-    outline: none;
-    border: none;
-    font-size: 15px;
-    font-weight: 600px;
-    border-radius: 5px;
-    cursor: pointer;
-    background: #4889da;
-    color: #f5f5f5;
-}
 
 #divmap{
     height: 400px; 
@@ -228,70 +136,6 @@ body.showLoginForm .popup{
     margin: auto;
     border-radius: 02%;
     
-}
-
-
-  
-/* Fondo modal: negro con opacidad al 50% */
-.modal {
-    display: none; /* Por defecto, estará oculto */
-    position: fixed; /* Posición fija */
-    z-index: 1; /* Se situará por encima de otros elementos de la página*/
-    padding-top: 200px; /* El contenido estará situado a 200px de la parte superior */
-    left: 0;
-    top: 0;
-    width: 100%; /* Ancho completo */
-    height: 100%; /* Algura completa */
-    overflow: auto; /* Se activará el scroll si es necesario */
-    background-color: rgba(0,0,0,0.5); /* Color negro con opacidad del 50% */
-  }
-  
-  /* Ventana o caja modal */
-  .contenido-modal {
-    position: relative; /* Relativo con respecto al contenedor -modal- */
-    background-color: white;
-    margin: auto; /* Centrada */
-    padding: 20px;
-    width: 60%;
-    -webkit-animation-name: animarsuperior;
-    -webkit-animation-duration: 0.5s;
-    animation-name: animarsuperior;
-    animation-duration: 0.5s
-  }
-  
-  /* Animación */
-  
-    
-  @keyframes animarsuperior {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
-  }
-  
-  /* Botón cerrar */
-  .close {
-    color: black;
-    float: right;
-    font-size: 30px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-.titulo_locales{
-    text-align: center;
-    font-size: 4em;
-
-}
-
-.titulo_soporte{
-    text-align: center;
-    font-size: 4em;
-
 }
 
 
