--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,6 +7,42 @@
     src: url(../font/PTSans-Regular.ttf);
 }
 
+.titulo_locales{
+    text-align: center;
+    font-size: 4em;
+
+}
+
+.titulo_soporte{
+    text-align: center;
+    font-size: 4em;
+}
+
+.formulario_a{
+    background-image: linear-gradient(0deg, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(../Imagenes/fondo_formulario.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    gap: 60px;
+
+}
+
+
+
+.form-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+    background-color: #FDFEFE;
+    max-width: 360px;
+    padding: 45px;
+    text-align: center;
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.2), 0 5px 5px 0 rgba(0,0,0,0.2);
+}
+
 .titulo{
     font-weight: bold;   
 }
@@ -176,17 +212,6 @@ footer{
     cursor: pointer;
   }
 
-.titulo_locales{
-    text-align: center;
-    font-size: 4em;
-
-}
-
-.titulo_soporte{
-    text-align: center;
-    font-size: 4em;
-
-}
 
 
 /* mapita responsivo */
